apps/frontend/src/rework/components/shared/molecules/DataTable/DataTable.module.scss
.datatable-container {
  display: grid;
  grid-template-columns: var(--grid-layout);
  grid-auto-rows: minmax(min-content, auto);
  align-content: start;
  border-radius: var(--spacing-xs);
  background-color: var(--datatable-background-color);
  height: 100%;
  min-height: 0;
  overflow: auto;
}

.datatable-row {
  display: contents;

  &:hover .datatable-cell {
    background-color: var(--state-on-surface-hover);
  }

  .datatable-cell {
    height: 3.75rem;
  }
}

.datatable-cell {
  display: flex;
  align-items: center;
  border-bottom: 1px solid var(--surface-container-highest);
  padding: 0 var(--spacing-s);
  min-width: 0;
  height: 3.5rem;
  color: var(--on-surface);
  font: var(--font-body-large);

  .header-content {
    min-width: 0;
    overflow-x: hidden;
    color: var(--on-surface-retreat);
    font: var(--font-label-large);
    text-overflow: ellipsis;
    white-space: nowrap;
  }
}

.datatable-cell-header {
  position: sticky;
  top: 0;
  z-index: 1;
  background-color: var(--datatable-background-color);
}

.first-column-inset .datatable-cell:first-child {
  padding-left: var(--spacing-l);
}

.datatable-footer {
  display: flex;
  position: sticky;
  bottom: 0;
  grid-column: 1 / -1;
  justify-content: space-between;
  align-items: center;
  z-index: 1;
  border-top: 1px solid var(--surface-container-highest);
  background-color: var(--datatable-background-color);
  padding: 0 var(--spacing-s);
  height: 3.75rem;
}

.datatable-footer-left,
.datatable-footer-right {
  display: flex;
  align-items: center;
  gap: var(--spacing-s);
}

.footer-label {
  color: var(--on-surface-retreat);
  font: var(--font-body-medium);
  white-space: nowrap;
}

